--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
@@ -16,25 +16,25 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.11.0
-          
+
       - name: Cache node moules
         id: cache
         uses: actions/cache@v3
         with:
-          path: '**/node_modules'
+          path: "**/node_modules"
           key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
           restore-keys: ${{runner.os}}-node-
-          
+
       - name: list
         run: ls
-       
+
       - name: Install modules
-        run: | 
+        run: |
           cd project
           ls
           npm ci
         if: steps.cache.outputs.cache-hit != 'true'
-      
+
       - name: Set public url
         run: |
           echo $GITHUB_REPOSITORY
@@ -49,7 +49,7 @@ jobs:
           echo "REACT_APP_OAUTH_CLIENT_SECRET=${{ secrets.REACT_APP_OAUTH_CLIENT_SECRET }}" >> $GITHUB_ENV
           echo "REACT_APP_OAUTH_REFRESH_TOKEN=${{ secrets.REACT_APP_OAUTH_REFRESH_TOKEN }}" >> $GITHUB_ENV
           echo "REACT_APP_VIDEO_PATH_SECRET=${{secrets.REACT_APP_VIDEO_PATH_SECRET}}" >> $GITHUB_ENV
-        
+
       - name: list
         run: ls -l
 
@@ -68,13 +68,9 @@ jobs:
           npm run build2
           ls
           cp build/index.html build/404.html
-          
-      - name: git lfs logs last
-        run: git lfs logs last
-        
+
       - name: gh-page
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{secrets.GITHYB_TOKEN}}
           publish_dir: ./project/build
-    
